Rename 04.1 Expressões.md to 04/04.1 Expressões.md

--- a/04/04.1 Expressões.md
+++ b/04/04.1 Expressões.md
@@ -118,15 +118,15 @@ Para evitar ambiguidade em relacao á ordem de aplicacao dos operadores numa exp
 Dito de outro modo:
 
 {% hint style="info" %}
-> #### Prioridade entre os operadores \(ordem de cálculo\):
+> #### Prioridade entre os operadores \(ordem de cálculo\):
 >
-> parêntesis **\( \)**  
-> exponenciação **\*\***  
-> multiplicação e divisão **\* /**  
-> soma e subtração **+ -**
+> parêntesis **\( \)**  
+> exponenciação **\*\***  
+> multiplicação e divisão **\* /**  
+> soma e subtração **+ -**
 
   
-**Operadores da mesma prioridade agrupam à esquerda.**
+**Operadores da mesma prioridade agrupam à esquerda.**
 {% endhint %}
 
 {% hint style="info" %}
@@ -167,5 +167,5 @@ A utilização de parêntesis permite alterar a ordem de aplicação dos operado
 	* 4/2+2/4 B 4/2+2/4
 	* 4+2\*2-4
 
-1. Reescreva as instruções abaixo com o mínimo de parênteses possível, mas sem alterar o resultado:
+1. Reescreva as instruções abaixo com o mínimo de parênteses possível, mas sem alterar o resultado:
 
